# Agent-Optimization-Platform

./: .gitignore  CLAUDE.md  DOCS.md  README.md  agent.py  cli_dashboard.py  demo_agent.py  docker-compose.yml  mehek_quickstart.py  mock.py  my_agent.py
.claude/: settings.local.json
.github/workflows/: deploy-website.yml
backend/: generate_data.py  requirements.txt  seed_demo_agent.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: agents.py  (+13 more)
backend/app/core/: api_key_crypto.py  config.py  plans.py  pricing.py
backend/app/db/: models.py  schema.py  session.py
backend/app/providers/: anthropic_provider.py  base.py  google_provider.py  openai_provider.py  perplexity_provider.py
backend/app/schemas/: agent.py  auth.py  metrics.py  optimization.py  request.py  subscription.py  team.py  usage.py
backend/app/services/: agent_service.py  auth_service.py  cost_service.py  github_service.py  ingestion_service.py  metrics_service.py  optimization_service.py  quality_service.py  recommendations_agg.py  scope.py  simulation_service.py  subscription_service.py  team_service.py  usage_service.py
frontend/: .mcp.json  Dockerfile  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(dashboard)/: decision-surface.css  layout.tsx  page.tsx  traeco-dashboard.css
frontend/app/components/: AgentBarChart.tsx  CustomerBarChart.tsx  DecisionCard.tsx  MetricCard.tsx  OutliersTable.tsx  ProviderBarChart.tsx  RejectModal.tsx  Sidebar.tsx  SpendLineChart.tsx  TopBar.tsx
frontend/app/join/: page.tsx
frontend/app/lib/: api.ts  auth.ts  mapToRec.ts  rec-types.ts
frontend/app/onboarding/: page.tsx
mehek_agent/: kalshi_agent.py
n8n-node/: package.json  tsconfig.json
n8n-node/src/: index.ts
n8n-node/src/credentials/: TraecoApi.credentials.ts
scripts/: generate_data.py
sdk/: README.md  example_agent.py  pyproject.toml
sdk/traeco/: __init__.py  _core.py
sdk/traeco_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
website/: index.html  integrate.html  pricing.html
(+17 files in other folders)
