[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "traeco-sdk"
version = "1.0.0"
description = "AI agent cost intelligence — intercept LLM calls, attribute costs, get recommendations."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["llm", "openai", "anthropic", "cost", "tracing", "ai-agents"]
dependencies = [
    "httpx>=0.24",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
all = ["openai>=1.0", "anthropic>=0.20"]

[tool.setuptools.packages.find]
where = ["."]
include = ["traeco*"]
