[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traeco-sdk"
version = "1.0.0"
description = "AI agent cost intelligence — trace LLM calls, attribute costs, get optimization recommendations."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["llm", "openai", "anthropic", "cost", "tracing", "ai-agents", "observability"]
authors = [
    { name = "Traeco", email = "hello@traeco.ai" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.24",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
all = ["openai>=1.0", "anthropic>=0.20"]

[project.urls]
Homepage = "https://traeco.ai"
Documentation = "https://traeco.ai/docs"
Repository = "https://github.com/saniagupta124/Agent-Optimization-Platform"

[tool.setuptools.packages.find]
where = ["."]
include = ["traeco*"]
